# leverage-inst-knowl

./: .gitignore  CLAUDE.md  authentication-mechanisms.md  bi-pipeline.md  lik-1-overview.md  lik-2-examples.md  lik-3-architecture-concise.md  lik-4-strategy.md  lik-architecture-concise.md  lik-architecture-old.md  lik-architecture-progressive.md  lik-architecture.md  lik-costs.md  lik-dl-storage.md  lik-examples.md  lik-overview.md  lik-strategy.md  limitations.md  mcp-availability.md  mise.toml
discovery-catalog-sync/: SKILL.md
discovery-layer-search/: SKILL.md
dl-project-index-query/: SKILL.md
lik-mcp/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml
lik-ui/: .env.example  .gitignore  README.md  SMOKE.md  docker-compose.yml  pyproject.toml
lik-ui/db/: init-local.sh  init.sql
lik-ui/src/lik_ui/: __main__.py  account.py  agents.py  app.py  app_auth.py  chat.py  db.py  oauth_connector.py  settings.py  sources.py  vault.py
lik-ui/src/lik_ui/static/: app.css  chat.js
lik-ui/src/lik_ui/templates/: agents.html  base.html  chat.html  connections.html  error.html  home.html  login.html  settings.html
lik-ui/tests/: conftest.py  test_account.py  test_agents.py  test_app_auth.py  test_chat.py  test_connections_flow.py  test_db.py  test_oauth_connector.py  test_settings.py  test_sources.py  test_vault.py
query-project-index/: SKILL.md
sync-catalog-from-project-indexes/: SKILL.md
v0.3/: lik-1-overview.md  lik-2-examples.md  lik-3-architecture.md  lik-4-strategy.md
v0.4/: 01-overview.md  02-concepts.md  03-examples.md  04-architecture.md  (+7 more)
(+32 files in other folders)
