[project]
name = "lik-ui"
version = "0.1.0"
description = "Hosted web app that connects data-source MCP servers and chats with a Claude Managed Agent."
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "jinja2>=3.1",
    "itsdangerous>=2.2",
    "python-multipart>=0.0.9",
    "httpx>=0.27",
    "anthropic>=0.40",
    "psycopg[binary]>=3.2",
    "psycopg-pool>=3.2",
    "pydantic>=2",
    "pydantic-settings>=2",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

# Ship the server-rendered templates and static assets inside the installed package —
# a non-editable `pip install .` (the container) omits non-Python files otherwise.
[tool.setuptools.package-data]
lik_ui = ["templates/*.html", "static/*"]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"
testpaths = ["tests"]
